--- a/mycv2.css
+++ b/mycv2.css
@@ -6,13 +6,13 @@ body {
   font-family: Helvetica, Arial, sans-serif;
 }
 
-#left {
+#left-cv {
   flex: 0.75;
   height: 1500px;
   background-color: #2c223a;
   color: white;
 }
-#left .title-header:before {
+#left-cv .title-header:before {
   content: "";
   display: inline-block;
   margin: -10px 10px;
@@ -25,17 +25,17 @@ body {
   -moz-clip-path: polygon(0% 50%, 25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%); /*Thiết lập hình dạng của hình lục giác bằng cách sử dụng thuộc tính clip-path trên trình duyệt firefox*/
 }
 
-#right {
+#right-cv {
   flex: 2;
   height: 1500px;
   background-color: aliceblue;
 }
 
-#infor-basic {
+#left-infor-basic {
   height: 20%;
   margin-top: 30px;
 }
-#infor-basic .hex-avatar {
+#left-infor-basic .hex-avatar {
   display: block;
   margin: 0 auto; /* Canh giữa hình lục giác */
   position: relative; /* Thiết lập vị trí tương đối cho hình lục giác*/
@@ -46,7 +46,7 @@ body {
   -webkit-clip-path: polygon(0% 50%, 25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%); /*Thiết lập hình dạng của hình lục giác bằng cách sử dụng thuộc tính clip-path trên trình duyệt webkit */
   -moz-clip-path: polygon(0% 50%, 25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%); /*Thiết lập hình dạng của hình lục giác bằng cách sử dụng thuộc tính clip-path trên trình duyệt firefox*/
 }
-#infor-basic .hex-avatar-background {
+#left-infor-basic .hex-avatar-background {
   position: absolute; /*Thiết lập vị trí tuyệt đối cho lớp nền của hình lục giác*/
   background-color: orange;
   top: 2px; /* Thiết lập khoảng cách từ trên xuống cho lớp nền , equal to border thickness */
@@ -56,28 +56,28 @@ body {
   -webkit-clip-path: polygon(0% 50%, 25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%);
   -moz-clip-path: polygon(0% 50%, 25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%);
 }
-#infor-basic .hex-avatar-background img {
+#left-infor-basic .hex-avatar-background img {
   width: 100%;
   height: 100%;
   object-fit: cover; /* Giữ tỷ lệ của ảnh */
 }
-#infor-basic .text-infor {
+#left-infor-basic .text-infor {
   text-align: center;
 }
 
-#profile {
+#left-profile {
   height: 20%;
 }
-#profile .content {
+#left-profile .content {
   display: block;
   margin: 0px 0px 0px 30px;
 }
-#profile p:before {
+#left-profile p:before {
   content: "Introduction:";
   display: inline-block;
   margin-right: 10px;
 }
-#profile .title-header:after {
+#left-profile .title-header:after {
   content: "";
   display: inline-block;
   height: 3px;
@@ -86,10 +86,10 @@ body {
   background-color: #ffffff;
 }
 
-#contact {
+#left-contact {
   height: 20%;
 }
-#contact .title-header:after {
+#left-contact .title-header:after {
   content: "";
   display: inline-block;
   width: calc(100% - 40px - 20px - 156.45px - 20px);
@@ -98,11 +98,11 @@ body {
   background-color: #ffffff;
 }
 
-#skills {
+#left-skills {
   height: 20%;
 }
 
-#connect {
+#left-connect {
   height: 20%;
 }
 
