--- a/mycv.css
+++ b/mycv.css
@@ -1,13 +1,14 @@
 @charset "UTF-8";
 body {
+  /*  thiết lập kiểu phông chữ cho văn bản trên trang web. Trình duyệt sẽ sửx dụng phông chữ đầu tiên trong danh sách (trong trường hợp này là Helvetica) nếu nó có sẵn trên hệ thống, nếu không thì nó sẽ sử dụng phông chữ thứ hai (Arial), và nếu cả hai phông chữ này đều không có sẵn, nó sẽ sử dụng bất kỳ phông chữ sans-serif nào mà nó có thể tìm thấy. */
   font-family: Helvetica, Arial, sans-serif;
+  font-size: 90%;
 }
 
 .main {
-  /*  thiết lập kiểu phông chữ cho văn bản trên trang web. Trình duyệt sẽ sửx dụng phông chữ đầu tiên trong danh sách (trong trường hợp này là Helvetica) nếu nó có sẵn trên hệ thống, nếu không thì nó sẽ sử dụng phông chữ thứ hai (Arial), và nếu cả hai phông chữ này đều không có sẵn, nó sẽ sử dụng bất kỳ phông chữ sans-serif nào mà nó có thể tìm thấy. */
   display: flex;
   margin: 40px auto;
-  width: 1100px;
+  width: 1200px;
 }
 .main ul {
   list-style-type: none;
@@ -135,18 +136,19 @@ body {
   height: 10px;
   border-radius: 50%;
   margin-right: 20px;
-  margin-top: 4px;
+  margin-top: 2px;
   background-color: #122033;
 }
 #right-cv .name-skill {
   justify-content: flex-end;
+  min-width: 140px;
 }
 #right-cv .status-skill {
   justify-content: flex-end;
   width: 150px;
   height: 10px;
   border-radius: 10px;
-  margin-top: 3px;
+  margin-top: -2px;
   margin-left: 20px;
   background-color: #e4e3e5;
   border: 3px solid #122033;
@@ -232,7 +234,7 @@ body {
 }
 #left-skills .infor-skill {
   display: flex;
-  margin-top: 10px;
+  margin-top: 15px;
   margin-left: 10px;
   margin-right: 10px;
 }
@@ -247,15 +249,15 @@ body {
 }
 #left-skills .name-skill {
   justify-content: flex-start;
-  min-width: 100px;
+  min-width: 145px;
 }
 #left-skills .status-skill {
   justify-content: flex-end;
   width: 125px;
   height: 10px;
   border-radius: 10px;
-  margin-top: 5px;
-  margin-left: 80px;
+  margin-bottom: 5px;
+  margin-left: 100px;
   border: 3px solid #e4e3e5;
 }
 
